--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,4 +1,3 @@
-.Tilt{
-    background: linear-gradient(to right, #fffcdc, #d9a7c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-}
+.Tilt {
+    background: linear-gradient(89deg, #FF5EDF 0%, #04C8DE 100%); /* w3c */
+  }
